# nafeesProject

backend/: pyproject.toml
backend/app/: database.py  logger.py  main.py
backend/app/api/: endpoints.py
backend/app/api/routers/: chat.py  health.py  scan.py  users.py
backend/app/clients/: supabase_client.py
backend/app/core/: config.py
backend/app/crud/: base_crud.py  chat.py  scan.py  users.py
backend/app/dependencies/: __init__.py  auth.py  deps.py
backend/app/exceptions/: const.py  exception.py  handler.py  logger_base.py  reporting.py
backend/app/models/: __init__.py  chat.py  message.py  scan.py  users.py
backend/app/schemas/: __init__.py  chat.py  scan.py  users.py
backend/app/services/: chat_service.py  message_service.py  scan_service.py  users_service.py
